--- a/doks/Структура БД.md
+++ b/doks/Структура БД.md
@@ -1,59 +1,125 @@
-
 # Описание структуры базы данных
 
 ## Таблица `users`
-- `id`              UUID PRIMARY KEY  Уникальный идентификатор пользователя
-- `username`        VARCHAR(255) UNIQUE NOT NULL  Уникальное имя пользователя
-- `email`           VARCHAR(255) UNIQUE NOT NULL  Уникальный email пользователя
-- `role`            VARCHAR(50) NOT NULL  Роль пользователя (администратор, пользователь, модератор)
-- `password`   VARCHAR(255) NOT NULL  Захешированный пароль пользователя
-- `created_at`      TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP  Дата создания пользователя
-- `updated_at`      TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP  Дата последнего обновления
+- `id` UUID PRIMARY KEY  Уникальный идентификатор пользователя
+- `username` VARCHAR(255) UNIQUE NOT NULL  Уникальное имя пользователя
+- `email` VARCHAR(255) UNIQUE NOT NULL  Уникальный email пользователя
+- `role` VARCHAR(50) NOT NULL  Роль пользователя (администратор, пользователь, модератор)
+- `password` VARCHAR(255) NOT NULL  Захешированный пароль пользователя
+- `preferences_id` UUID  Идентификатор предпочтений пользователя
+- `last_active_at` TIMESTAMP  Время последней активности пользователя
+- `total_books_read` INTEGER DEFAULT 0  Общее количество прочитанных книг
+- `favorite_genres` UUID[]  Массив идентификаторов любимых жанров
+- `created_at` TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP  Дата создания пользователя
+- `updated_at` TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP  Дата последнего обновления
 
-## Таблица `books`
-- `id`    UUID PRIMARY KEY  Уникальный идентификатор книги
-- `title`    VARCHAR(255) NOT NULL  Название книги
-- `author`    VARCHAR(255) NOT NULL  Автор книги
-- `year`    VARCHAR(4)  Год издания
-- `publisher`    VARCHAR(255)  Издатель
-- `isbn`    VARCHAR(20) UNIQUE  Уникальный ISBN
-- `description`    TEXT  Описание книги
-- `cover`    VARCHAR(255)  Ссылка на обложку
-- `categories`    UUID REFERENCES categories(id)  Категория книги
-- `tags`    VARCHAR[]  Теги книги
-- `language`    VARCHAR(50)  Язык книги
-- `file_url`    VARCHAR(255)  Ссылка на файл
-- `created_at`    TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP  Дата добавления
-- `updated_at`    TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP  Дата обновления
-
-
-## Таблица `categories` 
-- `id`    UUID PRIMARY KEY  Уникальный идентификатор категории
-- `book_id` UUID REFERENCES books(id)  Идентификатор книги
-- `name`    VARCHAR(255) UNIQUE NOT NULL  Название категории
-- `description`    TEXT  Описание категории
-
-
-## Таблица `recommendations` 
-##### (продумать насчет реков, будут ли оно обновляться, вычислять каждый раз заново и тд, переделать)
-- `id` UUID PRIMARY KEY  Уникальный идентификатор рекомендации
-- `book_id` UUID REFERENCES books(id)  Идентификатор книги
+## Таблица `user_preferences`
+- `id` UUID PRIMARY KEY  Уникальный идентификатор предпочтений пользователя
+- `user_id` UUID REFERENCES users(id)  Ссылка на пользователя
+- `preferred_genres` UUID[]  Список предпочтительных жанров
+- `preferred_languages` VARCHAR[]  Список предпочтительных языков
+- `reading_frequency` INTEGER  Частота чтения книг
+- `last_updated` TIMESTAMP DEFAULT CURRENT_TIMESTAMP  Дата последнего обновления предпочтений
 
 ## Таблица `sessions`
 - `id` UUID PRIMARY KEY  Уникальный идентификатор сессии
-- `user_id` UUID REFERENCES users(id)  Идентификатор пользователя
+- `user_id` UUID REFERENCES users(id)  Ссылка на пользователя
 - `session_token` VARCHAR(255) UNIQUE NOT NULL  Уникальный токен сессии
 - `created_at` TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP  Дата создания сессии
 - `expires_at` TIMESTAMP NOT NULL  Дата истечения сессии
 
-## Таблица `user_books`
-- `id` UUID PRIMARY KEY  Уникальный идентификатор связи пользователя с книгой
-- `user_id` UUID REFERENCES users(id)  Идентификатор пользователя
-- `book_id` UUID REFERENCES books(id)  Идентификатор книги
-- `uploaded_at` TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP  Дата загрузки книги пользователем
+## Таблица `books`
+- `id` UUID PRIMARY KEY  Уникальный идентификатор книги
+- `title` VARCHAR(255) NOT NULL  Название книги
+- `author` VARCHAR(255) NOT NULL  Автор книги
+- `year` VARCHAR(4)  Год издания
+- `publisher` VARCHAR(255)  Издательство
+- `isbn` VARCHAR(20) UNIQUE  Уникальный ISBN книги
+- `description` TEXT  Описание книги
+- `cover` VARCHAR(255)  Ссылка на обложку книги
+- `categories` UUID REFERENCES categories(id)  Ссылка на категорию
+- `tags` VARCHAR[]  Теги книги
+- `language` VARCHAR(50)  Язык книги
+- `file_url` VARCHAR(255)  Ссылка на файл книги
+- `series_id` UUID REFERENCES book_series(id)  Ссылка на серию книг
+- `page_count` INTEGER  Количество страниц
+- `average_rating` DECIMAL(3,2) DEFAULT 0  Средний рейтинг книги
+- `rating_count` INTEGER DEFAULT 0  Количество оценок
+- `view_count` INTEGER DEFAULT 0  Количество просмотров
+- `download_count` INTEGER DEFAULT 0  Количество скачиваний
+- `elasticsearch_synced_at` TIMESTAMP  Дата последней синхронизации с Elasticsearch
+- `content_hash` VARCHAR(64)  Хеш-код содержимого книги
+- `version` INTEGER DEFAULT 1  Версия книги
+- `created_at` TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP  Дата создания записи
+- `updated_at` TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP  Дата последнего обновления записи
 
-## Таблица `downloads`
-- `id` UUID PRIMARY KEY  Уникальный идентификатор загрузки
-- `user_id` UUID REFERENCES users(id)  Идентификатор пользователя
-- `book_id` UUID REFERENCES books(id)  Идентификатор книги
-- `downloaded_at` TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP  Дата и время скачивания
+## Таблица `book_metadata`
+- `id` UUID PRIMARY KEY  Уникальный идентификатор метаданных книги
+- `book_id` UUID REFERENCES books(id)  Ссылка на книгу
+- `file_size` BIGINT  Размер файла в байтах
+- `file_format` VARCHAR(50)  Формат файла
+- `s3_key` VARCHAR(255)  Уникальный идентификатор файла в S3
+- `s3_bucket` VARCHAR(255)  Название S3-бака
+- `elasticsearch_id` VARCHAR(255)  Идентификатор в Elasticsearch
+- `page_count` INTEGER  Количество страниц
+- `md5_hash` VARCHAR(32)  Хеш-код файла
+
+## Таблица `categories`
+- `id` UUID PRIMARY KEY  Уникальный идентификатор категории
+- `book_id` UUID REFERENCES books(id)  Ссылка на книгу
+- `name` VARCHAR(255) UNIQUE NOT NULL  Название категории
+- `description` TEXT  Описание категории
+- `parent_id` UUID REFERENCES categories(id)  Родительская категория
+- `slug` VARCHAR(255)  Уникальный идентификатор категории
+- `book_count` INTEGER DEFAULT 0  Количество книг в категории
+
+## Таблица `book_series`
+- `id` UUID PRIMARY KEY  Уникальный идентификатор серии книг
+- `name` VARCHAR(255) NOT NULL  Название серии
+- `description` TEXT  Описание серии
+- `total_books` INTEGER DEFAULT 0  Количество книг в серии
+
+## Таблица `series_books`
+- `series_id` UUID REFERENCES book_series(id)  Ссылка на серию
+- `book_id` UUID REFERENCES books(id)  Ссылка на книгу
+- `book_order` INTEGER  Порядковый номер книги в серии
+- `PRIMARY KEY (series_id, book_id)`  Композитный ключ
+
+## Таблица `book_ratings`
+- `id` UUID PRIMARY KEY  Уникальный идентификатор рейтинга
+- `user_id` UUID REFERENCES users(id)  Ссылка на пользователя
+- `book_id` UUID REFERENCES books(id)  Ссылка на книгу
+- `rating` INTEGER CHECK (rating >= 1 AND rating <= 5)  Оценка книги (от 1 до 5)
+- `review_text` TEXT  Текст отзыва
+- `created_at` TIMESTAMP DEFAULT CURRENT_TIMESTAMP  Дата создания
+- `updated_at` TIMESTAMP DEFAULT CURRENT_TIMESTAMP  Дата обновления
+
+## Таблица `reading_progress`
+- `id` UUID PRIMARY KEY  Уникальный идентификатор прогресса чтения
+- `user_id` UUID REFERENCES users(id)  Ссылка на пользователя
+- `book_id` UUID REFERENCES books(id)  Ссылка на книгу
+- `current_page` INTEGER  Текущая страница
+- `total_pages` INTEGER  Общее количество страниц
+- `last_read_at` TIMESTAMP  Дата последнего чтения
+- `status` VARCHAR(50)  Статус чтения
+
+## Таблица `user_interactions`
+- `id` UUID PRIMARY KEY  Уникальный идентификатор взаимодействия
+- `user_id` UUID REFERENCES users(id)  Ссылка на пользователя
+- `book_id` UUID REFERENCES books(id)  Ссылка на книгу
+- `interaction_type` VARCHAR(50)  Тип взаимодействия
+- `created_at` TIMESTAMP DEFAULT CURRENT_TIMESTAMP  Дата создания
+
+## Таблица `book_collections`
+- `id` UUID PRIMARY KEY  Уникальный идентификатор коллекции
+- `user_id` UUID REFERENCES users(id)  Ссылка на пользователя
+- `name` VARCHAR(255)  Название коллекции
+- `description` TEXT  Описание коллекции
+- `is_public` BOOLEAN DEFAULT false  Флаг публичности коллекции
+- `created_at` TIMESTAMP DEFAULT CURRENT_TIMESTAMP  Дата создания
+
+## Таблица `collection_books`
+- `collection_id` UUID REFERENCES book_collections(id)  Ссылка на коллекцию
+- `book_id` UUID REFERENCES books(id)  Ссылка на книгу
+- `PRIMARY KEY (collection_id, book_id)`  Композитный ключ
+
