add UserStory and diagrems

--- a/doks/План разработки .md
+++ b/doks/План разработки .md
@@ -6,7 +6,7 @@
 - Backend Framework: FastAPI
 - База данных: PostgreSQL
 - ORM: SQLAlchemy + Alembic
-- Поисковый движок: Elasticsearch
+- Поисковый движок: OpenSearch
 - Кэширование: Redis
 - Очереди задач: Taskiq
 - Файловое хранилище: S3
