Update План разработки .md

--- a/doks/План разработки .md
+++ b/doks/План разработки .md
@@ -97,7 +97,7 @@
 
 
 
-## 3. общий порядок разработки (так посоветол гпт)
+## 3. общий порядок разработки 
 ### 6.1. Этап 1: Основной бэкенд (
 1. Настройка проекта и базовой структуры
 2. Реализация моделей данных и миграций
